Free week update 18th august

--- a/free-hero-rotation.html
+++ b/free-hero-rotation.html
@@ -66,6 +66,147 @@
         (adsbygoogle = window.adsbygoogle || []).push({});
         </script>
 
+        <h2>August 18th - August 25th</h2>
+        <div class="btn-group btn-group-primary">
+          <button data-toggle="dropdown" class="btn btn-danger" type="button">Anub'arak</button>
+          <button data-toggle="dropdown" class="btn btn-danger dropdown-toggle" type="button"><span class="caret"></span>
+          </button>
+          <ul class="dropdown-menu">
+            <li><a><b>C9 iDream's Talent Order</b></a></li>
+            <li><a>Level 1 - Assault Scarab</a></li>
+            <li><a>Level 4 - Underking</a></li>
+            <li><a>Level 7 - Bed of Barbs</a></li>
+            <li><a>Level 10 - Locust Swarm</a></li>
+            <li><a>Level 13 - Spell Shield</a></li>
+            <li><a>Level 16 - Blood for Blood</a></li>
+            <li><a>Level 20 - Rewind</a></li>
+            <li class="divider"></li>
+            <li><a href="http://www.heroesnexus.com/talent-calculator/38-anubarak#jPmPNNPNKN9MBPmAA">Zuna's Talent Build</a></li>
+            <li class="divider"></li>
+            <li><a href="http://www.heroesfire.com/hots/wiki/heroes/anubarak">Hero Information</a></li>
+          </ul>
+        </div>
+        <div class="btn-group btn-group-primary">
+          <button data-toggle="dropdown" class="btn btn-info" type="button">Malfurion</button>
+          <button data-toggle="dropdown" class="btn btn-info dropdown-toggle" type="button"><span class="caret"></span>
+          </button>
+          <ul class="dropdown-menu">
+            <li><a><b>C9 iDream's Talent Order</b></a></li>
+            <li><a>Level 1 - Moonburn</a></li>
+            <li><a>Level 4 - Elune's Grace</a></li>
+            <li><a>Level 7 - Enduring Growth</a></li>
+            <li><a>Level 10 - Tranquility</a></li>
+            <li><a>Level 13 - Ice Block</a></li>
+            <li><a>Level 16 - Tenacious Roots</a></li>
+            <li><a>Level 20 - Storm Shield</a></li>
+            <li class="divider"></li>
+            <li><a href="http://www.heroesnexus.com/talent-calculator/16-malfurion#oPjLuPOBqPRBPBQAA">Zuna's Talent Build</a></li>
+            <li class="divider"></li>
+            <li><a href="http://www.heroesfire.com/hots/wiki/heroes/malfurion">Hero Information</a></li>
+          </ul>
+        </div>
+        <div class="btn-group btn-group-primary">
+          <button data-toggle="dropdown" class="btn btn-success" type="button">Nazeebo</button>
+          <button data-toggle="dropdown" class="btn btn-success dropdown-toggle" type="button"><span class="caret"></span>
+          </button>
+          <ul class="dropdown-menu">
+            <li><a><b>C9 iDream's Talent Ordder</b></a></li>
+            <li><a>Level 1 - Death Ritual</a></li>
+            <li><a>Level 4 - Spider Cluster</a></li>
+            <li><a>Level 7 - Gidbinn</a></li>
+            <li><a>Level 10 - Gargantuan</a></li>
+            <li><a>Level 13 - Sprint</a></li>
+            <li><a>Level 16 - Leaping Spiders</a></li>
+            <li><a>Level 20 - Humongoid</a></li>
+            <li class="divider"></li>          
+            <li><a href="http://www.heroesnexus.com/talent-calculator/4-nazeebo#oPiCwPkCeCvHgCEAA">Zuna's Talent Build</a></li>
+            <li class="divider"></li>          
+            <li><a href="http://www.heroesfire.com/hots/wiki/heroes/nazeebo">Hero Information</a></li>
+          </ul>
+        </div>
+        <div class="btn-group btn-group-primary">
+          <button data-toggle="dropdown" class="btn btn-primary" type="button">Tychus</button>
+          <button data-toggle="dropdown" class="btn btn-primary dropdown-toggle" type="button"><span class="caret"></span>
+          </button>
+          <ul class="dropdown-menu">
+            <li><a><b>C9 iDream's Talent Order</b></a></li>
+            <li><a>Level 1 - Armor Piercing Rounds</a></li>
+            <li><a>Level 4 - Melting Point</a></li>
+            <li><a>Level 13 - Lead Rain</a></li>
+            <li><a>Level 10 - Commander Odin</a></li>
+            <li><a>Level 13 - Relentless</a></li>
+            <li><a>Level 16 - Stoneskin</a></li>
+            <li><a>Level 20 - Bolt of the Storm</a></li>
+            <li class="divider"></li>
+            <li><a href="http://www.heroesnexus.com/talent-calculator/9-tychus#/GkPPCLCdPdL_GJAA">Zuna's Talent Build</a></li>
+            <li><a href="https://www.youtube.com/watch?v=PH-xu4WgF2k">Video Commentary</a></li>
+            <li class="divider"></li>
+            <li><a href="http://www.heroesfire.com/hots/wiki/heroes/tychus">Hero Information</a></li>
+          </ul>
+        </div>
+        <div class="btn-group btn-group-primary">
+          <button data-toggle="dropdown" class="btn btn-primary" type="button">Valla</button>
+          <button data-toggle="dropdown" class="btn btn-primary dropdown-toggle" type="button"><span class="caret"></span>
+          </button>
+          <ul class="dropdown-menu">
+            <li><a><b>C9 iDream's Talents</b></a></li>
+            <li><a>Level 1 - Rapid Displacement</a></li>
+            <li><a>Level 4 - Sustained Anomaly</a></li>
+            <li><a>Level 7 - First Aid</a></li>
+            <li><a>Level 10 - Void Prison</a></li>
+            <li><a>Level 13 - Wormhole</a></li>
+            <li><a>Level 16 - Double Bombs</a></li>
+            <li><a>Level 20 - Rewind</a></li>
+            <li class="divider"></li>
+            <li><a href="http://www.heroesnexus.com/talent-calculator/15-valla#oPmPrPmBkBdHNFPAA">Zuna's Talent Build</a></li>
+            <li class="divider"></li>
+            <li><a href="http://www.heroesfire.com/hots/wiki/heroes/valla">Hero Information</a></li>
+          </ul>
+        </div>
+
+        <h3>Unlocked level 12</h3>
+        <div class="btn-group btn-group-primary">
+          <button data-toggle="dropdown" class="btn btn-danger" type="button">Johanna</button>
+          <button data-toggle="dropdown" class="btn btn-danger dropdown-toggle" type="button"><span class="caret"></span>
+          </button>
+          <ul class="dropdown-menu">
+            <li><a><b>C9 iDream's Talent Order</b></a></li>
+            <li><a>Level 1 - Knight Takes Pawn</a></li>
+            <li><a>Level 4 - Laws of Hope</a></li>
+            <li><a>Level 7 - Battle Momentum</a></li>
+            <li><a>Level 10 - Blessed Shield</a></li>
+            <li><a>Level 13 - Hold Your Ground</a></li>
+            <li><a>Level 16 - Holy Renewal</a></li>
+            <li><a>Level 20 - Indestructible</a></li>
+            <li class="divider"></li>
+            <li><a href="http://www.heroesnexus.com/talent-calculator/49-johanna#0QhP5QzQwQHR_QxAA">Zuna's Talent Build</a></li>
+            <li class="divider"></li>
+            <li><a href="http://www.heroesfire.com/hots/wiki/heroes/johanna">Hero Information</a></li>
+          </ul>
+        </div>
+
+        <h3>Unlocked level 15</h3>
+        <div class="btn-group btn-group-primary">
+          <button data-toggle="dropdown" class="btn btn-primary" type="button">Kael'thas</button>
+          <button data-toggle="dropdown" class="btn btn-primary dropdown-toggle" type="button"><span class="caret"></span>
+          </button>
+          <ul class="dropdown-menu">
+            <li><a><b>C9 iDream's Talent Order</b></a></li>
+            <li><a>Level 1 - Fel Infusion</a></li>
+            <li><a>Level 4 - Gathering Power</a></li>
+            <li><a>Level 7 - Fission Bomb</a></li>
+            <li><a>Level 10 - Phoenix</a></li>
+            <li><a>Level 13 - Flamethrower</a></li>
+            <li><a>Level 16 - Ignite</a></li>
+            <li><a>Level 20 - Bolt of the Storm</a></li>
+            <li class="divider"></li>
+            <li><a href="http://www.heroesfire.com/hots/wiki/heroes/kaelthas">Hero Information</a></li>
+          </ul>
+        </div>
+
+        <br />
+        <br />
+
         <h2>August 11th - August 18th</h2>
         <div class="btn-group btn-group-primary">
           <button data-toggle="dropdown" class="btn btn-primary" type="button">Falstad</button>
@@ -202,137 +343,6 @@
             <li><a href="http://www.heroesnexus.com/talent-calculator/2-abathur#IOMA5OFA6OFOPACAA">Zuna's Talent Build</a></li>
             <li class="divider"></li>
             <li><a href="http://www.heroesfire.com/hots/wiki/heroes/abathur">Hero Information</a></li>
-          </ul>
-        </div>
-
-        <h2>August 4th - August 11th</h2>
-        <div class="btn-group btn-group-primary">
-          <button data-toggle="dropdown" class="btn btn-danger" type="button">E.T.C</button>
-          <button data-toggle="dropdown" class="btn btn-danger dropdown-toggle" type="button"><span class="caret"></span>
-          </button>
-          <ul class="dropdown-menu">
-            <li><a><b>C9 iDream's Talent Order</b></a></li>
-            <li><a>Level 1 - Prog Rock</a></li>
-            <li><a>Level 4 - Double-Necked Guitar</a></li>
-            <li><a>Level 7 - Follow Through</a></li>
-            <li><a>Level 10 - Mosh Pit</a></li>
-            <li><a>Level 13 - Groupies</a></li>
-            <li><a>Level 16 - Imposing Presence</a></li>
-            <li><a>Level 20 - Tour Bus</a></li>
-            <li class="divider"></li>
-            <li><a href="http://www.heroesnexus.com/talent-calculator/20-e-t-c#oP7R6RFD1RzR5RUAA">Zuna's Talent Build</a></li>
-            <li class="divider"></li>
-            <li><a href="http://www.heroesfire.com/hots/wiki/heroes/elite-tauren-chieftain">Hero Information</a></li>
-          </ul>
-        </div>
-        <div class="btn-group btn-group-primary">
-          <button data-toggle="dropdown" class="btn btn-info" type="button">Li Li</button>
-          <button data-toggle="dropdown" class="btn btn-info dropdown-toggle" type="button"><span class="caret"></span>
-          </button>
-          <ul class="dropdown-menu">
-            <li><a><b>C9 iDream's Talent Order</b></a></li>
-            <li><a>Level 1 - Conjurer's Pursuit</a></li>
-            <li><a>Level 4 - Mass Vortex</a></li>
-            <li><a>Level 7 - Shake it Off!</a></li>
-            <li><a>Level 10 - Jug of 1,000 cups</a></li>
-            <li><a>Level 13 - Shrink Ray</a></li>
-            <li><a>Level 16 - Two for One</a></li>
-            <li><a>Level 20 - Kung Fu Hustle</a></li>
-            <li class="divider"></li>
-            <li><a href="http://www.heroesnexus.com/talent-calculator/28-li-li#cOVIvPeIdOYICPcAA">Zuna's Talent Build</a></li>
-            <li class="divider"></li>
-            <li><a href="http://www.heroesfire.com/hots/wiki/heroes/li-li">Hero Information</a></li>
-          </ul>
-        </div>
-        <div class="btn-group btn-group-primary">
-          <button data-toggle="dropdown" class="btn btn-primary" type="button">Nova</button>
-          <button data-toggle="dropdown" class="btn btn-primary dropdown-toggle" type="button"><span class="caret"></span>
-          </button>
-          <ul class="dropdown-menu">
-            <li><a><b>C9 iDream's Talent Order</b></a></li>
-            <li><a>Level 1 - Ambush Snipe</a></li>
-            <li><a>Level 4 - Gathering Power</a></li>
-            <li><a>Level 7 - One in the Chamber</a></li>
-            <li><a>Level 10 - Precision Strike</a></li>
-            <li><a>Level 13 - Lethal Decoy</a></li>
-            <li><a>Level 16 - Crippling Shot</a></li>
-            <li><a>Level 20 - Bolt of the Storm</a></li>
-            <li class="divider"></li>
-            <li><a href="http://www.heroesnexus.com/talent-calculator/14-nova#jPICDCiApNIPUGOAA">Zuna's Talent Build</a></li>
-            <li class="divider"></li>
-            <li><a href="http://www.heroesfire.com/hots/wiki/heroes/nova">Hero Information</a></li>
-          </ul>
-        </div>
-        <div class="btn-group btn-group-primary">
-          <button data-toggle="dropdown" class="btn btn-info" type="button">Tassadar</button>
-          <button data-toggle="dropdown" class="btn btn-info dropdown-toggle" type="button"><span class="caret"></span>
-          </button>
-          <ul class="dropdown-menu">
-            <li><a><b>C9 iDream's Talent Order</b></a></li>
-            <li><a>Level 1 - Conjurer's Pursuit</a></li>
-            <li><a>Level 4 - Mental Acuity</a></li>
-            <li><a>Level 7 - Static Charge</a></li>
-            <li><a>Level 10 - Archon</a></li>
-            <li><a>Level 13 - Prescience</a></li>
-            <li><a>Level 16 - Dimensional Warp</a></li>
-            <li><a>Level 20 - Dark Archon</a></li>
-            <li class="divider"></li>
-            <li><a href="http://www.heroesnexus.com/talent-calculator/6-tassadar#hKmKuGlKeKgKCPGAA">Zuna's Talent Build</a></li>
-            <li><a href="https://www.youtube.com/watch?v=SISUDJpmWoc">Video Commentary</a></li>
-            <li class="divider"></li>
-            <li><a href="http://www.heroesfire.com/hots/wiki/heroes/tassadar">Hero Information</a></li>
-          </ul>
-        </div>
-        <div class="btn-group btn-group-primary">
-          <button data-toggle="dropdown" class="btn btn-primary" type="button">Thrall</button>
-          <button data-toggle="dropdown" class="btn btn-primary dropdown-toggle" type="button"><span class="caret"></span>
-          </button>
-          <ul class="dropdown-menu">
-            <li><a><b>C9 iDream's Talent Order</b></a></li>
-            <li><a>Level 1 - Seasoned Marksman</a></li>
-            <li><a>Level 4 - Envenom</a></li>
-            <li><a>Level 7 - Follow Through</a></li>
-            <li><a>Level 10 - Sundering</a></li>
-            <li><a>Level 13 - Restless Wolves</a></li>
-            <li><a>Level 16 - Blood for Blood</a></li>
-            <li><a>Level 20 - Bolt of the Storm</a></li>
-            <li class="divider"></li>
-            <li><a href="http://www.heroesnexus.com/talent-calculator/43-thrall#GPtO0OnO1O_OuOrAA">Zuna's Talent Build</a></li>
-            <li class="divider"></li>
-            <li><a href="http://www.heroesfire.com/hots/wiki/heroes/thrall">Hero Information</a></li>
-          </ul>
-        </div>
-
-        <h3>Unlocked level 12</h3>
-        <div class="btn-group btn-group-primary">
-          <button data-toggle="dropdown" class="btn btn-success" type="button">Azmodan</button>
-          <button data-toggle="dropdown" class="btn btn-success dropdown-toggle" type="button"><span class="caret"></span>
-          </button>
-          <ul class="dropdown-menu">
-            <li><a><b>C9 iDream's Talent Order</b></a></li>
-            <li><a>Level 1 - Taste for Blood</a></li>
-            <li><a>Level 4 - Bound Minion</a></li>
-            <li><a>Level 7 - Infernal Globe</a></li>
-            <li><a>Level 10 - Black Pool</a></li>
-            <li><a>Level 13 - March of Sin</a></li>
-            <li><a>Level 16 - Blood for Blood</a></li>
-            <li><a>Level 20 - Bolt of the Storm</a></li>
-            <li class="divider"></li>
-            <li><a href="http://www.heroesnexus.com/talent-calculator/39-azmodan#iNmPVNTNsNXNkNnAA">Zuna's Talent Build</a></li>
-            <li class="divider"></li>
-            <li><a href="http://www.heroesfire.com/hots/wiki/heroes/azmodan">Hero Information</a></li>
-          </ul>
-        </div>
-
-        <h3>Unlocked level 15</h3>
-        <div class="btn-group btn-group-primary">
-          <button data-toggle="dropdown" class="btn btn-primary" type="button">The Butcher</button>
-          <button data-toggle="dropdown" class="btn btn-primary dropdown-toggle" type="button"><span class="caret"></span>
-          </button>
-          <ul class="dropdown-menu">
-            <li><a href="http://www.heroesnexus.com/talent-calculator/54-the-butcher#oPkSrPcSlSrSuS2AA">Zuna's Talent Build</a></li>
-            <li class="divider"></li>
-            <li><a href="http://www.heroesfire.com/hots/wiki/heroes/the-butcher">Hero Information</a></li>
           </ul>
         </div>
         <br />
