--- a/zuna-tierlist.html
+++ b/zuna-tierlist.html
@@ -351,7 +351,7 @@
               <button data-toggle="dropdown" class="btn btn-primary dropdown-toggle" type="button"><span class="caret"></span>
               </button>
               <ul class="dropdown-menu">
-                <li><a href="https://tempostorm.com/heroes-of-the-storm/talent-calculator/tychus#9KHp/GkPPCLCdPdL_GJAA">Zuna's Talent Build</a></li>
+                <li><a href="https://tempostorm.com/heroes-of-the-storm/talent-calculator/tychus#9KHm">Zuna's Talent Build</a></li>
                 <li><a href="https://www.youtube.com/watch?v=PH-xu4WgF2k">Video Commentary</a></li>
                 <li class="divider"></li>
                 <li><a href="http://www.heroesfire.com/hots/wiki/heroes/tychus">Hero Information</a></li>
