Free week update 25th August

--- a/free-hero-rotation.html
+++ b/free-hero-rotation.html
@@ -66,6 +66,140 @@
         (adsbygoogle = window.adsbygoogle || []).push({});
         </script>
 
+        <h2>August 25th - September 1st</h2>
+        <div class="btn-group btn-group-primary">
+          <button data-toggle="dropdown" class="btn btn-danger" type="button">E.T.C</button>
+          <button data-toggle="dropdown" class="btn btn-danger dropdown-toggle" type="button"><span class="caret"></span>
+          </button>
+          <ul class="dropdown-menu">
+            <li><a><b>C9 iDream's Talent Order</b></a></li>
+            <li><a>Level 1 - Prog Rock</a></li>
+            <li><a>Level 4 - Double-Necked Guitar</a></li>
+            <li><a>Level 7 - Follow Through</a></li>
+            <li><a>Level 10 - Mosh Pit</a></li>
+            <li><a>Level 13 - Groupies</a></li>
+            <li><a>Level 16 - Imposing Presence</a></li>
+            <li><a>Level 20 - Tour Bus</a></li>
+            <li class="divider"></li>
+            <li><a href="https://tempostorm.com/heroes-of-the-storm/talent-calculator/etc#GBiy">Zuna's Talent Build</a></li>
+            <li class="divider"></li>
+            <li><a href="http://www.heroesfire.com/hots/wiki/heroes/elite-tauren-chieftain">Hero Information</a></li>
+          </ul>
+        </div>
+        <div class="btn-group btn-group-primary">
+          <button data-toggle="dropdown" class="btn btn-success" type="button">Gazlowe</button>
+          <button data-toggle="dropdown" class="btn btn-success dropdown-toggle" type="button"><span class="caret"></span>
+          </button>
+          <ul class="dropdown-menu">
+            <li><a><b>C9 iDream's Talent Order</b></a></li>
+            <li><a>Level 1 - Break it Down!</a></li>
+            <li><a>Level 4 - Goblin Fusion</a></li>
+            <li><a>Level 7 - Engine Gunk</a></li>
+            <li><a>Level 10 - Grav-O-Bomb 3000</a></li>
+            <li><a>Level 13 - Sprint</a></li>
+            <li><a>Level 16 - Hyperfocus Coils</a></li>
+            <li><a>Level 20 - Miniature Black Hole</a></li>
+            <li class="divider"></li>
+            <li><a href="https://tempostorm.com/heroes-of-the-storm/talent-calculator/gazlowe#HIp3">Zuna's Talent Build</a></li>
+            <li class="divider"></li>
+            <li><a href="http://www.heroesfire.com/hots/wiki/heroes/gazlowe">Hero Information</a></li>
+          </ul>
+        </div>
+        <div class="btn-group btn-group-primary">
+          <button data-toggle="dropdown" class="btn btn-info" type="button">Li Li</button>
+          <button data-toggle="dropdown" class="btn btn-info dropdown-toggle" type="button"><span class="caret"></span>
+          </button>
+          <ul class="dropdown-menu">
+            <li><a><b>C9 iDream's Talent Order</b></a></li>
+            <li><a>Level 1 - Conjurer's Pursuit</a></li>
+            <li><a>Level 4 - Mass Vortex</a></li>
+            <li><a>Level 7 - Shake it Off!</a></li>
+            <li><a>Level 10 - Jug of 1,000 cups</a></li>
+            <li><a>Level 13 - Shrink Ray</a></li>
+            <li><a>Level 16 - Two for One</a></li>
+            <li><a>Level 20 - Kung Fu Hustle</a></li>
+            <li class="divider"></li>
+            <li><a href="https://tempostorm.com/heroes-of-the-storm/talent-calculator/lili#8xwG">Zuna's Talent Build</a></li>
+            <li class="divider"></li>
+            <li><a href="http://www.heroesfire.com/hots/wiki/heroes/li-li">Hero Information</a></li>
+          </ul>
+        </div>
+        <div class="btn-group btn-group-primary">
+          <button data-toggle="dropdown" class="btn btn-info" type="button">Rehgar</button>
+          <button data-toggle="dropdown" class="btn btn-info dropdown-toggle" type="button"><span class="caret"></span>
+          </button>
+          <ul class="dropdown-menu">
+            <li><a><b>C9 iDream's Talent Order</b></a></li>
+            <li><a>Level 1 - Spiritwalker's Grace</a></li>
+            <li><a>Level 4 - Feral Heart</a></li>
+            <li><a>Level 7 - Cleanse</a></li>
+            <li><a>Level 10 - Ancestral Healing</a></li>
+            <li><a>Level 13 - Healing Surge</a></li>
+            <li><a>Level 16 - Tidal Waves</a></li>
+            <li><a>Level 20 - Rewind</a></li>
+            <li class="divider"></li>
+            <li><a href="https://tempostorm.com/heroes-of-the-storm/talent-calculator/rehgar#8vP0">Zuna's Talent Build</a></li>
+            <li class="divider"></li>
+            <li><a href="http://www.heroesfire.com/hots/wiki/heroes/rehgar">Hero Information</a></li>
+          </ul>
+        </div>
+        <div class="btn-group btn-group-primary">
+          <button data-toggle="dropdown" class="btn btn-success" type="button">Sergeant Hammer</button>
+          <button data-toggle="dropdown" class="btn btn-success dropdown-toggle" type="button"><span class="caret"></span>
+          </button>
+          <ul class="dropdown-menu">
+            <li><a><b>C9 iDream's Talent Order</b></a></li>
+            <li><a>Level 1 - Advanced Artillery</a></li>
+            <li><a>Level 4 - Maelstrom Shells</a></li>
+            <li><a>Level 7 - First Aid</a></li>
+            <li><a>Level 10 - Napalm Strike</a></li>
+            <li><a>Level 13 - Barricade</a></li>
+            <li><a>Level 16 - Mine Field</a></li>
+            <li><a>Level 20 - Advanced Lava Strike</a></li>
+            <li class="divider"></li>
+            <li><a href="https://tempostorm.com/heroes-of-the-storm/talent-calculator/sgthammer#9KW1">Zuna's Talent Build</a></li>
+            <li class="divider"></li>
+            <li><a href="http://www.heroesfire.com/hots/wiki/heroes/sergeant-hammer">Hero Information</a></li>
+          </ul>
+        </div>
+
+        <h3>Unlocked level 12</h3>
+        <div class="btn-group btn-group-primary">
+          <button data-toggle="dropdown" class="btn btn-primary" type="button">Kerrigan</button>
+          <button data-toggle="dropdown" class="btn btn-primary dropdown-toggle" type="button"><span class="caret"></span>
+          </button>
+          <ul class="dropdown-menu">
+            <li><a><b>C9 iDream's Talent Order</b></a></li>
+            <li><a>Level 1 - Sweeping Grasp</a></li>
+            <li><a>Level 4 - Envenom</a></li>
+            <li><a>Level 7 - Battle Momentum</a></li>
+            <li><a>Level 10 - Maelstrom</a></li>
+            <li><a>Level 13 - Sprint</a></li>
+            <li><a>Level 16 - Blood for Blood</a></li>
+            <li><a>Level 20 - Bolt of the Storm</a></li>
+            <li class="divider"></li>
+            <li><a href="https://tempostorm.com/heroes-of-the-storm/talent-calculator/kerrigan#DAw1">Zuna's Talent Build</a></li>
+            <li><a href="https://www.youtube.com/watch?v=t8yB4yiBtWk">Video Commentary</a></li>
+            <li class="divider"></li>
+            <li><a href="http://www.heroesfire.com/hots/wiki/heroes/kerrigan">Hero Information</a></li>
+          </ul>
+        </div>
+
+        <h3>Unlocked level 15</h3>
+        <div class="btn-group btn-group-primary">
+          <button data-toggle="dropdown" class="btn btn-primary" type="button">Leoric</button>
+          <button data-toggle="dropdown" class="btn btn-primary dropdown-toggle" type="button"><span class="caret"></span>
+          </button>
+          <ul class="dropdown-menu">         
+            <li><a href="https://tempostorm.com/heroes-of-the-storm/talent-calculator/leoric#KkW1">Zuna's Talent Build</a></li>
+            <li class="divider"></li>          
+            <li><a href="http://www.heroesfire.com/hots/wiki/heroes/leoric">Hero Information</a></li>
+          </ul>
+        </div>
+
+        <br />
+        <br />
+
         <h2>August 18th - August 25th</h2>
         <div class="btn-group btn-group-primary">
           <button data-toggle="dropdown" class="btn btn-danger" type="button">Anub'arak</button>
@@ -201,148 +335,6 @@
             <li><a>Level 20 - Bolt of the Storm</a></li>
             <li class="divider"></li>
             <li><a href="http://www.heroesfire.com/hots/wiki/heroes/kaelthas">Hero Information</a></li>
-          </ul>
-        </div>
-
-        <br />
-        <br />
-
-        <h2>August 11th - August 18th</h2>
-        <div class="btn-group btn-group-primary">
-          <button data-toggle="dropdown" class="btn btn-primary" type="button">Falstad</button>
-          <button data-toggle="dropdown" class="btn btn-primary dropdown-toggle" type="button"><span class="caret"></span>
-          </button>
-          <ul class="dropdown-menu">
-            <li><a><b>C9 iDream's Talent Order</b></a></li>
-            <li><a>Level 1 - Updraft</a></li>
-            <li><a>Level 4 - Gathering Power</a></li>
-            <li><a>Level 7 - First Aid</a></li>
-            <li><a>Level 10 - Hinterland Blast</a></li>
-            <li><a>Level 13 - Static Shield</a></li>
-            <li><a>Level 16 - Overdrive</a></li>
-            <li><a>Level 20 - Epic Mount</a></li>
-            <li class="divider"></li>
-            <li><a href="http://www.heroesnexus.com/talent-calculator/11-falstad#aOcPiPkOdPIPYPLAA">Zuna's Talent Build</a></li>
-            <li class="divider"></li>
-            <li><a href="http://www.heroesfire.com/hots/wiki/heroes/falstad">Hero Information</a></li>
-          </ul>
-        </div>
-        <div class="btn-group btn-group-primary">
-          <button data-toggle="dropdown" class="btn btn-danger" type="button">Muradin</button>
-          <button data-toggle="dropdown" class="btn btn-danger dropdown-toggle" type="button"><span class="caret"></span>
-          </button>
-          <ul class="dropdown-menu">
-            <li><a><b>C9 iDream's Talent Order</b></a></li>
-            <li><a>Level 1 - Reverberation</a></li>
-            <li><a>Level 4 - Thunderburn</a></li>
-            <li><a>Level 7 - Piercing Bolt</a></li>
-            <li><a>Level 10 - Avatar</a></li>
-            <li><a>Level 13 - Thunderstrike</a></li>
-            <li><a>Level 16 - Stoneform</a></li>
-            <li><a>Level 20 - Rewind</a></li>
-            <li class="divider"></li>
-            <li><a href="http://www.heroesnexus.com/talent-calculator/22-muradin#jPNGEJfD0IcDGJWAA ">Zuna's Talent Build</a></li>
-            <li class="divider"></li>
-            <li><a href="http://www.heroesfire.com/hots/wiki/heroes/muradin">Hero Information</a></li>
-          </ul>
-        </div>
-        <div class="btn-group btn-group-primary">
-          <button data-toggle="dropdown" class="btn btn-primary" type="button">Raynor</button>
-          <button data-toggle="dropdown" class="btn btn-primary dropdown-toggle" type="button"><span class="caret"></span>
-          </button>
-          <ul class="dropdown-menu">
-            <li><a><b>C9 iDream's Talent Order</b></a></li>
-            <li><a>Level 1 - Give Me More!</a></li>
-            <li><a>Level 4 - Confident Aim</a></li>
-            <li><a>Level 7 - Revolution Overdrive</a></li>
-            <li><a>Level 10 - Raynor's Raiders</a></li>
-            <li><a>Level 13 - Double Barreled</a></li>
-            <li><a>Level 16 - Bullseye</a></li>
-            <li><a>Level 20 - Bolt of the Storm</a></li>
-            <li class="divider"></li>
-            <li><a href="http://www.heroesnexus.com/talent-calculator/3-raynor#oPWGSPCBaGPPZGDAA">Zuna's Talent Build</a></li>
-            <li class="divider"></li>
-            <li><a href="http://www.heroesfire.com/hots/wiki/heroes/raynor">Hero Information</a></li>
-          </ul>
-        </div>
-        <div class="btn-group btn-group-primary">
-          <button data-toggle="dropdown" class="btn btn-danger" type="button">Sonya</button>
-          <button data-toggle="dropdown" class="btn btn-danger dropdown-toggle" type="button"><span class="caret"></span>
-          </button>
-          <ul class="dropdown-menu">
-            <li><a><b>C9 iDream's Talent Order</b></a></li>
-            <li><a>Level 1 - Endless Fury</a></li>
-            <li><a>Level 4 - Shattered Ground</a></li>
-            <li><a>Level 7 - Poisoned Spear</a></li>
-            <li><a>Level 10 - Leap</a></li>
-            <li><a>Level 13 - Mystical Spear</a></li>
-            <li><a>Level 16 - Furious Blow</a></li>
-            <li><a>Level 20 - Hardened Shield</a></li>
-            <li class="divider"></li>
-            <li><a href="http://www.heroesnexus.com/talent-calculator/13-sonya#JQKQrPxC8OZPDHNAA">Zuna's Talent Build</a></li>
-            <li class="divider"></li>
-            <li><a href="http://www.heroesfire.com/hots/wiki/heroes/sonya">Hero Information</a></li>
-          </ul>
-        </div>
-        <div class="btn-group btn-group-primary">
-          <button data-toggle="dropdown" class="btn btn-success" type="button">Sylvanas</button>
-          <button data-toggle="dropdown" class="btn btn-success dropdown-toggle" type="button"><span class="caret"></span>
-          </button>
-          <ul class="dropdown-menu">
-            <li><a><b>C9 iDream's Talent Order</b></a></li>
-            <li><a>Level 1 - With the Wind</a></li>
-            <li><a>Level 4 - Envenom</a></li>
-            <li><a>Level 7 - Unstable Poison</a></li>
-            <li><a>Level 10 - Wailing Arrow</a></li>
-            <li><a>Level 13 - Evasive Fire</a></li>
-            <li><a>Level 16 - Blood for Blood</a></li>
-            <li><a>Level 20 - Bolt of the Storm</a></li>
-            <li class="divider"></li>
-            <li><a href="http://www.heroesnexus.com/talent-calculator/47-sylvanas#oPmPnQVQbQ_OXQvAA">Zuna's Talent Build</a></li>
-            <li class="divider"></li>
-            <li><a href="http://www.heroesfire.com/hots/wiki/heroes/sylvanas">Hero Information</a></li>
-          </ul>
-        </div>
-
-        <h3>Unlocked level 12</h3>
-        <div class="btn-group btn-group-primary">
-          <button data-toggle="dropdown" class="btn btn-info" type="button">Brightwing</button>
-          <button data-toggle="dropdown" class="btn btn-info dropdown-toggle" type="button"><span class="caret"></span>
-          </button>
-          <ul class="dropdown-menu">
-            <li><a><b>C9 iDream's Talent Order</b></a></li>
-            <li><a>Level 1 - Hyper Shift</a></li>
-            <li><a>Level 4 - Peekaboo!</a></li>
-            <li><a>Level 7 - Phase Shield</a></li>
-            <li><a>Level 10 - Blink Heal</a></li>
-            <li><a>Level 13 - Shield Bust</a></li>
-            <li><a>Level 16 - Greater Polymorph</a></li>
-            <li><a>Level 20 - Rewind</a></li>
-            <li class="divider"></li>
-            <li><a href="http://www.heroesnexus.com/talent-calculator/26-brightwing#LPIIJInIMIOSDSaAA">Zuna's Talent Build</a></li>
-            <li class="divider"></li>
-            <li><a href="http://www.heroesfire.com/hots/wiki/heroes/brightwing">Hero Information</a></li>
-          </ul>
-        </div>
-
-        <h3>Unlocked level 15</h3>
-        <div class="btn-group btn-group-primary">
-          <button data-toggle="dropdown" class="btn btn-success" type="button">Abathur</button>
-          <button data-toggle="dropdown" class="btn btn-success dropdown-toggle" type="button"><span class="caret"></span>
-          </button>
-          <ul class="dropdown-menu">
-            <li><a><b>C9 iDream's Talent Order</b></a></li>
-            <li><a>Level 1 - Pressurized Glands</a></li>
-            <li><a>Level 4 - Prolific Dispersal</a></li>
-            <li><a>Level 7 - Vile Nest</a></li>
-            <li><a>Level 10 - Ultimate Evolution</a></li>
-            <li><a>Level 13 - Soma Transference</a></li>
-            <li><a>Level 16 - Envenomed Spikes</a></li>
-            <li><a>Level 20 - Hivemind</a></li>
-            <li class="divider"></li>
-            <li><a href="http://www.heroesnexus.com/talent-calculator/2-abathur#IOMA5OFA6OFOPACAA">Zuna's Talent Build</a></li>
-            <li class="divider"></li>
-            <li><a href="http://www.heroesfire.com/hots/wiki/heroes/abathur">Hero Information</a></li>
           </ul>
         </div>
         <br />
