Leoric is Warrior not Assassin

--- a/free-hero-rotation.html
+++ b/free-hero-rotation.html
@@ -186,7 +186,7 @@
         </div>
 
         <h3>Unlocked level 15</h3>
-        <div class="btn-group btn-group-primary">
+        <div class="btn-group btn-group-danger">
           <button data-toggle="dropdown" class="btn btn-primary" type="button">Leoric</button>
           <button data-toggle="dropdown" class="btn btn-primary dropdown-toggle" type="button"><span class="caret"></span>
           </button>
