--- a/free-hero-rotation.html
+++ b/free-hero-rotation.html
@@ -186,9 +186,9 @@
         </div>
 
         <h3>Unlocked level 15</h3>
-        <div class="btn-group btn-group-primary">
-          <button data-toggle="dropdown" class="btn btn-primary" type="button">Leoric</button>
-          <button data-toggle="dropdown" class="btn btn-primary dropdown-toggle" type="button"><span class="caret"></span>
+        <div class="btn-group btn-group-danger">
+          <button data-toggle="dropdown" class="btn btn-danger" type="button">Leoric</button>
+          <button data-toggle="dropdown" class="btn btn-danger dropdown-toggle" type="button"><span class="caret"></span>
           </button>
           <ul class="dropdown-menu">         
             <li><a href="https://tempostorm.com/heroes-of-the-storm/talent-calculator/leoric#KkW1">Zuna's Talent Build</a></li>
